--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.6.2",
+    "axios": "^0.24.0",
     "cra-template-minimal": "1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
